--- a/styles/projects.css
+++ b/styles/projects.css
@@ -14,7 +14,7 @@
     gap: 8px;
     margin-bottom: 56px;
   }
-  .grid-section{
+  .grid-projects-section{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -24,7 +24,7 @@
     height: 584px;
   }
 
-  .grid {
+  .grid-projects {
     margin: 0px;
     display: grid;
     height: 100vh;
