finalizando seção contact e adicionando icon na aba do site

--- a/styles/services.css
+++ b/styles/services.css
@@ -9,10 +9,11 @@
   padding-block: 88px 120px;
   gap: 56px;
 
-  #header-section {
+  #header-services {
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 8px;
 
     width: 355px;
     height: 61px;
