--- a/styles/contact.css
+++ b/styles/contact.css
@@ -8,7 +8,7 @@
   flex-direction: column;
   align-items: center;
   
-  background: url('/assets/images/bg_contacts.svg');
+  background: url('/assets/images/bg_contacts.jpg');
   background-size: 1366px 787px;
 
   #header-contact {
